# SeamCarving

./: .gitignore  CMakeLists.txt  README.md  array3D.h  filtering.cpp  filtering.h  floatimage.cpp  seamcarve.cpp  utils.h
src/: SeamCarving.cpp  SeamCarving.h  SeamCarving_main.cpp  a2.cpp  animate.py  array3D.h  exceptions.h  filtering.cpp  filtering.h  floatimage.cpp
